2005-08-03  Carl Worth  <cworth@cworth.org>

	* rsvg-cairo-draw.h, rsvg-cairo-render.h, rsvg-cairo-render.c: 
	Fill in some missing pieces. Paths now render nicely.
	
2005-08-03  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-file-util.c: Create 2 generic functions for loading handles from data
	* rsvg-art-file-util.c: Move the old rsvg-file-util.c to here
	* rsvg.c: Export rsvg_handle_get_dimensions()
	* rsvg-cairo.c: Make this compile	
	
2005-08-03  Carl Worth  <cworth@cworth.org>

	* rsvg-cairo-draw.c: (_set_rsvg_affine), (rsvg_cairo_render_path):
	Set cairo's CTM based on state->affine so that paths are properly
	transformed.

2005-08-03  Carl Worth  <cworth@cworth.org>

	* rsvg-cairo-draw.c: (_pattern_add_rsvg_color_stops),
	(_set_source_rsvg_linear_gradient),
	(_set_source_rsvg_radial_gradient),
	(_set_source_rsvg_solid_colour), (_set_source_rsvg_pattern),
	(_set_source_rvsg_paint_server), (rsvg_cairo_render_path): Add
	some very preliminary code to render paths with cairo. There's
	code here to do solid colors as well as linear and radial
	gradients, (but no patterns yet). We don't yet have interfaces on
	top that allow any of this to be tested so it's guaranteed to be
	broken, (and likely is in many ways).

2005-08-02  Carl Worth  <cworth@cworth.org>

	* rsvg-base.c: (rsvg_desc_handler_characters),
	(rsvg_title_handler_characters),
	(rsvg_metadata_handler_characters), (rsvg_characters),

	(rsvg_entity_decl), (rsvg_handle_write_impl): Add casts to quiet
	gcc4's complaints about "pointer targets differ in
	signedness". Not types were changed here, only casts added. The
	type disagreement is with glib, string.h, and libxml2 as follows:

		g_strndup((char*)ch, len)
		strlen((char*name)
		entity->name = (xmlChar*)dupname
		entity->SystemID = (xmlChar*)g_strdup ((char*)systemId)
		etc.

2005-08-02  Carl Worth  <cworth@cworth.org>

	* .cvsignore:
	* doc/.cvsignore:
	* moz-plugin/.cvsignore: Add several generated files.

2005-07-30 Dom Lachowicz <cinamod@hotmail.com>